fix project items extra spacing

--- a/src/components/projects/projects.scss
+++ b/src/components/projects/projects.scss
@@ -32,21 +32,16 @@
         flex-wrap: wrap;
         justify-content: center;
         align-items: flex-start;
-        margin: 55px 40px;
         text-align: left;
-
-        @media only screen and (min-width: 768px) {
-            margin: 60px 92px;
-        }
 
         .projectItems {
             width: 134px;
             cursor: pointer;
-            margin:5px;
+            margin: 10px;
 
             @media only screen and (min-width: 1024px) {
                 width: 380px;
-                margin: 10px;
+                margin: 20px;
             }
             
             a {
